[project]
name = "napari-psf-extractor"
version = "1.0.2"
description = "A simple plugin to extract precise models of the Point Spread Functions of images"
authors = ["Alexandru Bolfa <me@alexbolfa.com>"]
edition = "2021"

[tool.poetry]
name = "napari-psf-extractor"
version = "1.0.2"
description = "A simple plugin to extract precise models of the Point Spread Functions of images"
authors = ["Alexandru Bolfa <me@alexbolfa.com>"]
readme = "README.md"
classifiers = [
    "Framework :: napari"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
magicgui = "*"
qtpy = "*"
matplotlib = "*"
trackpy = "*"
superqt = "*"
opencv-python = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "*"
pytest-cov = "*"
pytest-qt = "*"
napari = "*"
pyqt5 = "*"


[tool.poetry.extras]
testing = ["tox", "pytest", "pytest-cov", "pytest-qt", "napari", "pyqt5"]


[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']


[tool.ruff]
line-length = 79
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
